# aasdk

./: .gitignore  CMakeLists.txt  Readme.md
aasdk_proto/: AVChannelData.proto  AVChannelMessageIdsEnum.proto  AVChannelSetupRequestMessage.proto  AVChannelSetupResponseMessage.proto  AVChannelSetupStatusEnum.proto  AVChannelStartIndicationMessage.proto  AVChannelStopIndicationMessage.proto  AVInputChannelData.proto  AVInputOpenRequestMessage.proto  AVInputOpenResponseMessage.proto  AVMediaAckIndicationMessage.proto  AVStreamTypeEnum.proto  AbsoluteInputEventData.proto  AbsoluteInputEventsData.proto  AccelData.proto  AudioConfigData.proto  AudioFocusRequestMessage.proto  AudioFocusResponseMessage.proto  AudioFocusStateEnum.proto  AudioFocusTypeEnum.proto  AudioTypeEnum.proto  AuthCompleteIndicationMessage.proto  BindingRequestMessage.proto  BindingResponseMessage.proto  BluetoothChannelData.proto  BluetoothChannelMessageIdsEnum.proto  BluetoothPairingMethodEnum.proto  BluetoothPairingRequestMessage.proto  BluetoothPairingResponseMessage.proto  BluetoothPairingStatusEnum.proto  ButtonCodeEnum.proto  ButtonEventData.proto  ButtonEventsData.proto  CMakeLists.txt  ChannelDescriptorData.proto  ChannelOpenRequestMessage.proto  ChannelOpenResponseMessage.proto  CompassData.proto  ControlMessageIdsEnum.proto  DiagnosticsData.proto  (+59 more)
cmake_modules/: ExternalGtest.cmake
include/f1x/aasdk/: Version.hpp
include/f1x/aasdk/Channel/: Promise.hpp  ServiceChannel.hpp
include/f1x/aasdk/Channel/AV/: AVInputServiceChannel.hpp  AudioServiceChannel.hpp  IAVInputServiceChannel.hpp  IAVInputServiceChannelEventHandler.hpp  IAudioServiceChannel.hpp  IAudioServiceChannelEventHandler.hpp  IVideoServiceChannel.hpp  IVideoServiceChannelEventHandler.hpp  MediaAudioServiceChannel.hpp  SpeechAudioServiceChannel.hpp  SystemAudioServiceChannel.hpp  VideoServiceChannel.hpp
include/f1x/aasdk/Channel/Bluetooth/: BluetoothServiceChannel.hpp  IBluetoothServiceChannel.hpp  IBluetoothServiceChannelEventHandler.hpp
include/f1x/aasdk/Channel/Control/: ControlServiceChannel.hpp  IControlServiceChannel.hpp  IControlServiceChannelEventHandler.hpp
include/f1x/aasdk/Channel/Input/: IInputServiceChannel.hpp  IInputServiceChannelEventHandler.hpp  InputServiceChannel.hpp
include/f1x/aasdk/Channel/Sensor/: ISensorServiceChannel.hpp  ISensorServiceChannelEventHandler.hpp  SensorServiceChannel.hpp
include/f1x/aasdk/Common/: Data.hpp  Log.hpp
include/f1x/aasdk/Error/: Error.hpp  ErrorCode.hpp
include/f1x/aasdk/IO/: IOContextWrapper.hpp  Promise.hpp  PromiseLink.hpp
include/f1x/aasdk/Messenger/: ChannelId.hpp  ChannelReceiveMessageQueue.hpp  ChannelReceivePromiseQueue.hpp  Cryptor.hpp  EncryptionType.hpp  FrameHeader.hpp  FrameSize.hpp  FrameSizeType.hpp  FrameType.hpp  ICryptor.hpp  IMessageInStream.hpp  IMessageOutStream.hpp  IMessenger.hpp  Message.hpp  MessageId.hpp  MessageInStream.hpp  MessageOutStream.hpp  MessageType.hpp  Messenger.hpp  Promise.hpp  Timestamp.hpp
include/f1x/aasdk/TCP/: ITCPEndpoint.hpp  ITCPWrapper.hpp  TCPEndpoint.hpp  TCPWrapper.hpp
include/f1x/aasdk/Transport/: DataSink.hpp  ISSLWrapper.hpp  ITransport.hpp  SSLWrapper.hpp  TCPTransport.hpp  Transport.hpp  USBDataSink.hpp  USBTransport.hpp
include/f1x/aasdk/USB/: AOAPDevice.hpp  AccessoryModeProtocolVersionQuery.hpp  AccessoryModeQuery.hpp  AccessoryModeQueryChain.hpp  AccessoryModeQueryChainFactory.hpp  AccessoryModeQueryFactory.hpp  AccessoryModeQueryType.hpp  AccessoryModeSendStringQuery.hpp  AccessoryModeSendStringType.hpp  AccessoryModeStartQuery.hpp  ConnectedAccessoriesEnumerator.hpp  IAOAPDevice.hpp  IAccessoryModeQuery.hpp  IAccessoryModeQueryChain.hpp  IAccessoryModeQueryChainFactory.hpp  IAccessoryModeQueryFactory.hpp  IConnectedAccessoriesEnumerator.hpp  IUSBEndpoint.hpp  IUSBHub.hpp  IUSBWrapper.hpp  USBEndpoint.hpp  USBHub.hpp  USBWrapper.hpp
include_ut/f1x/aasdk/Messenger/UT/: Cryptor.mock.hpp  MessageInStream.mock.hpp  MessageOutStream.mock.hpp  ReceivePromiseHandler.mock.hpp  SendPromiseHandler.mock.hpp
include_ut/f1x/aasdk/TCP/UT/: TCPEndpoint.mock.hpp  TCPEndpointPromiseHandler.mock.hpp  TCPWrapper.mock.hpp
include_ut/f1x/aasdk/Transport/UT/: Transport.mock.hpp  TransportReceivePromiseHandler.mock.hpp  TransportSendPromiseHandler.mock.hpp
include_ut/f1x/aasdk/USB/UT/: AOAPDevice.mock.hpp  AccessoryModeQuery.mock.hpp  AccessoryModeQueryChain.mock.hpp  AccessoryModeQueryChainFactory.mock.hpp  AccessoryModeQueryFactory.mock.hpp  (+8 more)
src/: Main.ut.cpp
src/Channel/: ServiceChannel.cpp
src/Channel/AV/: AVInputServiceChannel.cpp  AudioServiceChannel.cpp  MediaAudioServiceChannel.cpp  SpeechAudioServiceChannel.cpp  SystemAudioServiceChannel.cpp  VideoServiceChannel.cpp
src/Channel/Bluetooth/: BluetoothServiceChannel.cpp
src/Channel/Control/: ControlServiceChannel.cpp
src/Channel/Input/: InputServiceChannel.cpp
src/Channel/Sensor/: SensorServiceChannel.cpp
src/Common/: Data.cpp
src/Error/: Error.cpp
src/IO/: IOContextWrapper.cpp
src/Messenger/: ChannelId.cpp  ChannelReceiveMessageQueue.cpp  ChannelReceivePromiseQueue.cpp  Cryptor.cpp  FrameHeader.cpp  FrameSize.cpp  Message.cpp  MessageId.cpp  MessageInStream.cpp  MessageInStream.ut.cpp  MessageOutStream.cpp  MessageOutStream.ut.cpp  Messenger.cpp  Messenger.ut.cpp  Timestamp.cpp
src/TCP/: TCPEndpoint.cpp  TCPEndpoint.ut.cpp  TCPWrapper.cpp
src/Transport/: DataSink.cpp  SSLWrapper.cpp  TCPTransport.cpp  TCPTransport.ut.cpp  Transport.cpp  USBDataSink.cpp  USBTransport.cpp  USBTransport.ut.cpp
src/USB/: AOAPDevice.cpp  AOAPDevice.ut.cpp  AccessoryModeProtocolVersionQuery.cpp  AccessoryModeProtocolVersionQuery.ut.cpp  AccessoryModeQuery.cpp  AccessoryModeQueryChain.cpp  AccessoryModeQueryChain.ut.cpp  AccessoryModeQueryChainFactory.cpp  AccessoryModeQueryFactory.cpp  AccessoryModeSendStringQuery.cpp  AccessoryModeSendStringQuery.ut.cpp  AccessoryModeStartQuery.cpp  AccessoryModeStartQuery.ut.cpp  ConnectedAccessoriesEnumerator.cpp  ConnectedAccessoriesEnumerator.ut.cpp  USBEndpoint.cpp  USBEndpoint.ut.cpp  USBHub.cpp  USBHub.ut.cpp  USBWrapper.cpp
